// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticles correctly handles empty lists without errors 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "firstCursor": null,
        "lastCursor": null,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`ListArticles filters by article types: IMAGE and AUDIO articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleType": "AUDIO",
            "id": "listArticleTest7",
          },
        },
        Object {
          "node": Object {
            "articleType": "IMAGE",
            "id": "listArticleTest6",
          },
        },
        Object {
          "node": Object {
            "articleType": "IMAGE",
            "id": "listArticleTest5",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by invalid operator 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Field "INVALID" is not defined by type "RangeInput".],
  ],
}
`;

exports[`ListArticles filters by mediaUrl, without MEDIA_ARTICLE_SUPPORT env: should return empty 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
    },
  },
}
`;

exports[`ListArticles filters by mixed query 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "text": "
      <HIGHLIGHT>憶昔封書與君</HIGHLIGHT>夜，<HIGHLIGHT>金鑾殿後欲明天</HIGHLIGHT>。<HIGHLIGHT>今夜封書</HIGHLIGHT>在何處？<HIGHLIGHT>廬山庵裏曉燈前</HIGHLIGHT>。<HIGHLIGHT>籠鳥檻猿俱未死</HIGHLIGHT>，<HIGHLIGHT>人間相見是何</HIGHLIGHT>年？

      微之，微之！此夕此心，君知之乎！
    ",
          },
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "text": "人生幾何，離闊如此！況以膠漆之心，置於胡越之身，進不得相合，退不能相忘，<HIGHLIGHT>牽攣乖隔</HIGHLIGHT>，<HIGHLIGHT>各欲白首</HIGHLIGHT>。",
          },
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "text": "
      憶昔封書與君夜，金鑾殿後欲明天。今夜封書在何處？廬山庵裏曉燈前。籠鳥檻猿俱未死，<HIGHLIGHT>人間相見是何年</HIGHLIGHT>？

      微之，微之！此夕此心，君知之乎！
    ",
          },
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis and given URL, find articles with the said URL's content 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [
              Object {
                "summary": "<HIGHLIGHT>今天下三分</HIGHLIGHT>，<HIGHLIGHT>益州</HIGHLIGHT> <HIGHLIGHT>疲弊</HIGHLIGHT>，<HIGHLIGHT>此誠危急存亡之秋也</HIGHLIGHT>。",
                "title": "<HIGHLIGHT>出師表</HIGHLIGHT>",
                "url": "http://qoo.com",
              },
            ],
            "text": null,
          },
          "node": Object {
            "hyperlinks": Array [
              Object {
                "summary": "居有頃，倚柱彈其劍，歌曰：「長鋏歸來乎！食無魚。」左右以告。孟嘗君曰：「食之，比門下之客。」",
                "topImageUrl": "http://gohome.com/image.jpg",
              },
              Object {
                "summary": "今天下三分，益州 疲弊，此誠危急存亡之秋也。",
                "topImageUrl": null,
              },
              Object {
                "summary": "summary should not match.",
                "topImageUrl": null,
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "text": "<HIGHLIGHT>臣亮言</HIGHLIGHT>：<HIGHLIGHT>先帝創業未半</HIGHLIGHT>，<HIGHLIGHT>而中道崩殂</HIGHLIGHT>。<HIGHLIGHT>今天下三分</HIGHLIGHT>，<HIGHLIGHT>益州</HIGHLIGHT> <HIGHLIGHT>疲弊</HIGHLIGHT>，<HIGHLIGHT>此誠危急存亡之秋也</HIGHLIGHT>。",
          },
          "node": Object {
            "hyperlinks": null,
            "id": "listArticleTest2",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis and given text, find articles containing hyperlinks with the said text 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [
              Object {
                "summary": "<HIGHLIGHT>居有頃</HIGHLIGHT>，<HIGHLIGHT>倚柱彈其劍</HIGHLIGHT>，<HIGHLIGHT>歌曰</HIGHLIGHT>：「<HIGHLIGHT>長鋏歸來乎</HIGHLIGHT>！<HIGHLIGHT>食無魚</HIGHLIGHT>。」<HIGHLIGHT>左右以告</HIGHLIGHT>。<HIGHLIGHT>孟嘗君曰</HIGHLIGHT>：「<HIGHLIGHT>食之</HIGHLIGHT>，<HIGHLIGHT>比門下之客</HIGHLIGHT>。」",
                "title": null,
                "url": "http://gohome.com",
              },
            ],
            "text": null,
          },
          "node": Object {
            "hyperlinks": Array [
              Object {
                "summary": "居有頃，倚柱彈其劍，歌曰：「長鋏歸來乎！食無魚。」左右以告。孟嘗君曰：「食之，比門下之客。」",
                "topImageUrl": "http://gohome.com/image.jpg",
              },
              Object {
                "summary": "今天下三分，益州 疲弊，此誠危急存亡之秋也。",
                "topImageUrl": null,
              },
              Object {
                "summary": "summary should not match.",
                "topImageUrl": null,
              },
            ],
            "id": "listArticleTest4",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by null operator 1`] = `
Object {
  "data": Object {
    "ListArticles": null,
  },
  "errors": Array [
    [GraphQLError: Invalid Expression!],
  ],
}
`;

exports[`ListArticles filters by replies time range: between 2020-02-04 and 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-08T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-05T14:41:19.044Z",
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replies time range: earlier or equal to 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-08T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-05T14:41:19.044Z",
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replies time range: later than 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-11T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-09T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-10T15:11:04.472Z",
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-09T15:11:04.472Z",
              },
            ],
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-08T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-05T14:41:19.044Z",
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles filters by reply types: replied with NOT_RUMOR and OPINIONATED 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "replyType": "OPINIONATED",
              },
              Object {
                "replyType": "NOT_ARTICLE",
              },
              Object {
                "replyType": "NOT_ARTICLE",
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "replyType": "NOT_RUMOR",
              },
              Object {
                "replyType": "NOT_ARTICLE",
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by replyCount EQ 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
            "replyCount": 1,
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by replyCount GT 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
            "replyCount": 3,
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
            "replyCount": 2,
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by replyCount LT 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
            "replyCount": 0,
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by replyRequestCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by time range: between 2020-02-04 and 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-05T00:00:00.000Z",
            "id": "listArticleTest2",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by time range: earlier or equal to 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-05T00:00:00.000Z",
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-03T00:00:00.000Z",
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles filters by time range: later than 2020-02-06 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-07T00:00:00.000Z",
            "id": "listArticleTest4",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId: author of listArticleTest1 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId: userId = user1, appId = app1 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters via article reply feedback count: hasArticleReplyWithMorePositiveFeedback = false 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "negativeFeedbackCount": 11,
                "positiveFeedbackCount": 10,
              },
              Object {
                "negativeFeedbackCount": 4,
                "positiveFeedbackCount": 3,
              },
              Object {
                "negativeFeedbackCount": 7,
                "positiveFeedbackCount": 5,
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [],
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "negativeFeedbackCount": 0,
                "positiveFeedbackCount": 0,
              },
            ],
            "id": "listArticleTest2",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters via article reply feedback count: hasArticleReplyWithMorePositiveFeedback = true 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "negativeFeedbackCount": 0,
                "positiveFeedbackCount": 1,
              },
              Object {
                "negativeFeedbackCount": 1,
                "positiveFeedbackCount": 0,
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters via articleRepliesFrom: do not have articleReply from user1 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "user": null,
              },
              Object {
                "user": null,
              },
              Object {
                "user": null,
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [],
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "user": null,
              },
            ],
            "id": "listArticleTest2",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters via articleRepliesFrom: has articleReply from user1 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "user": Object {
                  "id": "user1",
                },
              },
              Object {
                "user": null,
              },
            ],
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QyIl0=",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles returns activities stats: articles with stats 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
            "stats": Array [],
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
            "stats": Array [],
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
            "stats": Array [
              Object {
                "date": "2020-01-03",
                "lineUser": 1,
                "lineVisit": 2,
                "webUser": 6,
                "webVisit": 21,
              },
              Object {
                "date": "2020-01-04",
                "lineUser": 9,
                "lineVisit": 15,
                "webUser": 7,
                "webVisit": 15,
              },
              Object {
                "date": "2020-01-05",
                "lineUser": null,
                "lineVisit": null,
                "webUser": 37,
                "webVisit": 44,
              },
            ],
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
            "stats": Array [
              Object {
                "date": "2020-01-03",
                "lineUser": 1,
                "lineVisit": 7,
                "webUser": 18,
                "webVisit": 26,
              },
              Object {
                "date": "2020-01-04",
                "lineUser": null,
                "lineVisit": null,
                "webUser": 6,
                "webVisit": 15,
              },
              Object {
                "date": "2020-01-05",
                "lineUser": 9,
                "lineVisit": 15,
                "webUser": 37,
                "webVisit": 44,
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles should fail if before and after both exist 1`] = `
Object {
  "data": Object {
    "ListArticles": null,
  },
  "errors": Array [
    [GraphQLError: Use of before & after is prohibited.],
  ],
}
`;

exports[`ListArticles sorts: by lastRepliedAt DESC 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-11T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-09T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-10T15:11:04.472Z",
              },
            ],
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-09T15:11:04.472Z",
              },
            ],
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [
              Object {
                "createdAt": "2020-02-08T15:11:04.472Z",
              },
              Object {
                "createdAt": "2020-02-05T14:41:19.044Z",
              },
            ],
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "articleReplies": Array [],
            "id": "listArticleTest3",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles sorts: by replyRequestCount DESC 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
            "replyRequestCount": 2,
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
            "replyRequestCount": 1,
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest4",
            "replyRequestCount": 0,
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
            "replyRequestCount": 0,
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzIsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
        "lastCursor": "WzAsImxpc3RBcnRpY2xlVGVzdDMiXQ==",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles sorts: by updatedAt DESC 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
            "updatedAt": "4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
            "updatedAt": "3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
            "updatedAt": "2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
            "updatedAt": "1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzQsImxpc3RBcnRpY2xlVGVzdDQiXQ==",
        "lastCursor": "WzEsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports after 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports before 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles throws error when author filter is not set correctly 1`] = `
Array [
  [GraphQLError: fromUserOfArticleId does not match any existing articles],
]
`;

exports[`ListArticles use filter categoryIds to list articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzEsImxpc3RBcnRpY2xlVGVzdDIiXQ==",
        "lastCursor": "WzEsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
      },
      "totalCount": 2,
    },
  },
}
`;
